--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.54.9"
+    "sass": "^1.54.9",
+    "tailwindcss-animation-delay": "^1.0.7",
+    "use-ripple-hook": "^1.0.22"
   },
   "devDependencies": {
     "@types/node": "18.7.18",
