--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.2",
+    "@vercel/analytics": "^0.1.4",
     "aos": "^2.3.4",
     "next": "12.3.0",
     "react": "18.2.0",
