--- a/package.json
+++ b/package.json
@@ -9,26 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.2",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@vercel/analytics": "^0.1.11",
-    "aos": "^2.3.4",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.381.0",
     "next": "14.2.3",
+    "next-themes": "^0.3.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "sass": "^1.54.9",
-    "tailwindcss-animation-delay": "^1.0.7",
-    "use-ripple-hook": "^1.0.22"
+    "sass": "^1.77.4",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-animation-delay": "^1.2.0"
   },
   "devDependencies": {
-    "@types/aos": "^3.0.4",
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
-    "autoprefixer": "^10.4.11",
+    "autoprefixer": "^10.4.19",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
-    "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "typescript": "4.8.3"
   }
 }
