--- a/package.json
+++ b/package.json
@@ -2,39 +2,51 @@
   "name": "sujitha-portofolio",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "studio": "drizzle-kit studio --port 42069 --verbose",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "bun run ./lib/migrate.ts",
+    "db:reset": "drizzle-kit drop"
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@t3-oss/env-nextjs": "^0.10.1",
+    "@types/pg": "^8.11.6",
     "@vercel/analytics": "^0.1.11",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.31.0",
     "lucide-react": "^0.381.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
+    "pg": "^8.11.5",
+    "postgres": "^3.4.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "sass": "^1.77.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "tailwindcss-animation-delay": "^1.2.0"
+    "tailwindcss-animation-delay": "^1.2.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.19",
+    "drizzle-kit": "^0.22.1",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
-    "typescript": "4.8.3"
+    "typescript": "^5.1.6"
   }
 }
