--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "db:reset": "drizzle-kit drop"
   },
   "dependencies": {
+    "@lucia-auth/adapter-drizzle": "^1.0.7",
+    "@node-rs/argon2": "^1.8.3",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
@@ -28,6 +30,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.31.0",
+    "lucia": "^3.2.0",
     "lucide-react": "^0.381.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
@@ -36,15 +39,16 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "sass": "^1.77.4",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-animation-delay": "^1.2.0",
     "zod": "^3.23.8"
-  },
+    },
   "devDependencies": {
     "@types/node": "18.7.18",
-    "@types/react": "18.0.20",
-    "@types/react-dom": "18.0.6",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
     "autoprefixer": "^10.4.19",
     "drizzle-kit": "^0.22.1",
     "eslint": "8.23.1",
