--- a/package.json
+++ b/package.json
@@ -27,24 +27,25 @@
     "@tiptap/starter-kit": "^2.4.0",
     "@types/pg": "^8.11.6",
     "@vercel/analytics": "^0.1.11",
+    "babel-plugin-react-compiler": "0.0.0-experimental-938cd9a-20240601",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.31.0",
     "lucia": "^3.2.0",
     "lucide-react": "^0.381.0",
-    "next": "14.2.3",
+    "next": "15.0.0-rc.0",
     "next-themes": "^0.3.0",
     "pg": "^8.11.5",
     "postgres": "^3.4.4",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "19.0.0-rc-6d3110b4d9-20240531",
+    "react-dom": "19.0.0-rc-6d3110b4d9-20240531",
     "sass": "^1.77.4",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-animation-delay": "^1.2.0",
     "zod": "^3.23.8"
-    },
+  },
   "devDependencies": {
     "@types/node": "18.7.18",
     "@types/react": "18.3.1",
