Feat: safe action basic done

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lucia": "^3.2.0",
     "lucide-react": "^0.381.0",
     "next": "15.0.0-rc.0",
+    "next-safe-action": "7.0.0-next.47",
     "next-themes": "^0.3.0",
     "pg": "^8.11.5",
     "postgres": "^3.4.4",
@@ -44,7 +45,8 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-animation-delay": "^1.2.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zod-form-data": "^2.0.2"
   },
   "devDependencies": {
     "@types/node": "18.7.18",
