--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "db:reset": "drizzle-kit drop"
   },
   "dependencies": {
+    "@docs.plus/extension-hypermultimedia": "^1.3.1",
     "@lucia-auth/adapter-drizzle": "^1.0.7",
     "@node-rs/argon2": "^1.8.3",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -22,6 +23,15 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@tiptap/core": "^2.4.0",
+    "@tiptap/extension-code-block-lowlight": "^2.4.0",
+    "@tiptap/extension-document": "^2.4.0",
+    "@tiptap/extension-link": "^2.4.0",
+    "@tiptap/extension-placeholder": "^2.4.0",
+    "@tiptap/extension-task-item": "^2.4.0",
+    "@tiptap/extension-task-list": "^2.4.0",
+    "@tiptap/extension-typography": "^2.4.0",
+    "@tiptap/html": "^2.4.0",
     "@tiptap/pm": "^2.4.0",
     "@tiptap/react": "^2.4.0",
     "@tiptap/starter-kit": "^2.4.0",
@@ -31,6 +41,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.31.0",
+    "lowlight": "^3.1.0",
     "lucia": "^3.2.0",
     "lucide-react": "^0.381.0",
     "next": "15.0.0-rc.0",
@@ -38,8 +49,15 @@
     "next-themes": "^0.3.0",
     "pg": "^8.11.5",
     "postgres": "^3.4.4",
+    "prosemirror-model": "^1.21.0",
+    "prosemirror-state": "^1.4.3",
+    "prosemirror-view": "^1.33.7",
     "react": "19.0.0-rc-6d3110b4d9-20240531",
+    "react-cool-inview": "^3.0.1",
     "react-dom": "19.0.0-rc-6d3110b4d9-20240531",
+    "react-icons": "^5.2.1",
+    "rehype": "^13.0.1",
+    "rehype-format": "^5.0.0",
     "sass": "^1.77.4",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
@@ -58,6 +76,6 @@
     "eslint-config-next": "12.3.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
-    "typescript": "^5.1.6"
+    "typescript": "^5.4.5"
   }
 }
