--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "babel-plugin-react-compiler": "0.0.0-experimental-938cd9a-20240601",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "drizzle-orm": "^0.31.0",
+    "highlight.js": "^11.9.0",
     "lowlight": "^3.1.0",
     "lucia": "^3.2.0",
     "lucide-react": "^0.381.0",
