--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "rehype": "^13.0.1",
     "rehype-format": "^5.0.0",
     "sass": "^1.77.4",
+    "slugify": "^1.6.6",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
