--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "next-themes": "^0.3.0",
     "pg": "^8.11.5",
     "postgres": "^3.4.4",
+    "posthog-js": "^1.266.0",
+    "posthog-node": "^5.8.4",
     "prosemirror-model": "^1.21.0",
     "prosemirror-state": "^1.4.3",
     "prosemirror-view": "^1.33.7",
